[tool.poetry]
name = "autotagger"
version = "0.1.0"
description = ""
authors = ["Vladimir Ignatev <ya.na.pochte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.7"
langchain = "^0.0.345"
pillow = "^10.1.0"
pandas = "^2.1.3"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
